# VLMEvalKit

./: .gitignore  pyproject.toml  run.py
vlmeval/: config.py
vlmeval/api/: base.py  gpt.py
vlmeval/dataset/: image_mcq.py
vlmeval/dataset/utils/: judge_util.py
vlmeval/vlm/: __init__.py
vlmeval/vlm/cambrian/: cambrian.py
vlmeval/vlm/cambrian/model/: builder.py  cambrian_arch.py
vlmeval/vlm/cambrian/model/language_model/: cambrian_llama.py
vlmeval/vlm/cambrian/model/multimodal_encoder/: base_encoder.py  builder.py  clip_convnext_encoder.py  clip_encoder.py  dino_encoder.py  hybrid_encoder.py  ijepa_encoder.py  load.py  mae_encoder.py  moco_encoder.py  sam_encoder.py  supervised_vit_encoder.py
vlmeval/vlm/cambrian/model/multimodal_encoder/sam/: encoder.py
vlmeval/vlm/cambrian/serve/: controller.py  gradio_web_server.py  model_worker.py
vlmeval/vlm/cambrian/train/: cambrian_trainer.py  train_fsdp.py  wandb_nan_alert_callback.py
vlmeval/vlm/eagle/: eagle_x.py  mm_utils.py
vlmeval/vlm/eagle/model/: builder.py
vlmeval/vlm/eagle/model/multimodal_encoder/: multi_backbone_channel_concatenation_encoder.py
vlmeval/vlm/llava/: llava.py
