[project]
name = "vlmevalkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "decord>=0.6.0 ; platform_machine != 'arm64'",
    "einops>=0.8.1",
    "eva-decord>=0.6.1 ; platform_machine == 'arm64'",
    "fvcore>=0.1.5.post20221221",
    "gradio>=5.29.0",
    "huggingface-hub>=0.31.1",
    "imageio>=2.37.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "omegaconf>=2.3.0",
    "openai>=1.78.0",
    "opencv-python>=4.4.0.46",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "portalocker>=3.1.1",
    "protobuf>=6.30.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "setuptools>=80.3.1",
    "sty>=1.0.6",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "timeout-decorator>=0.5.0",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "typing-extensions>=4.13.2",
    "validators>=0.35.0",
    "xlsxwriter>=3.2.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default=true
